--- a/payment-test-v2 copy.html
+++ b/payment-test-v2 copy.html
@@ -144,7 +144,7 @@
     </div>
     
     <script>
-        const BASE_URL = 'https://dorisuni.store';  // Gateway URL
+        const BASE_URL = 'http://localhost:8080';  // Gateway URL
         let currentOrder = null;
         let portoneConfig = null;
 
