--- a/payment-test-v2.html
+++ b/payment-test-v2.html
@@ -144,7 +144,7 @@
     </div>
     
     <script>
-        const BASE_URL = 'https://dorisuni.store';  // Gateway URL
+        const BASE_URL = 'https://coubee-api.murkui.com';  // Gateway URL
         let currentOrder = null;
         let portoneConfig = null;
 
