fix:check cors error

--- a/test-cors.html
+++ b/test-cors.html
@@ -227,7 +227,11 @@
     </div>
 
     <script>
-        const BASE_URL = 'https://coubee-api.murkui.com';
+        // Always use gateway URL - never access services directly
+        const BASE_URL = 'https://coubee-api.murkui.com';  // Production gateway
+
+        // For local development, uncomment the line below and comment the line above
+        // const BASE_URL = 'http://localhost:8080';  // Local gateway
         let accessToken = null;
 
         // Utility Functions
