--- a/test-cors.html
+++ b/test-cors.html
@@ -228,10 +228,8 @@
 
     <script>
         // Always use gateway URL - never access services directly
-        const BASE_URL = 'https://coubee-api.murkui.com';  // Production gateway
-
-        // For local development, uncomment the line below and comment the line above
-        // const BASE_URL = 'http://localhost:8080';  // Local gateway
+        const BASE_URL = 'http://localhost:8080';  // Local gateway for testing
+        // const BASE_URL = 'https://coubee-api.murkui.com';  // Production gateway
         let accessToken = null;
 
         // Utility Functions
