--- a/test-cors.html
+++ b/test-cors.html
@@ -228,7 +228,7 @@
 
     <script>
         // Always use gateway URL - never access services directly
-        const BASE_URL = 'http://localhost:8080';  // Local gateway for testing
+        const BASE_URL = 'http://127.0.0.1:34969';  // Local gateway for testing
         // const BASE_URL = 'https://coubee-api.murkui.com';  // Production gateway
         let accessToken = null;
 
