Feat: Implement features marked as TODO

--- a/payment-test-v2 copy.html
+++ b/payment-test-v2 copy.html
@@ -149,7 +149,7 @@
     </div>
     
     <script>
-        const BASE_URL = 'http://127.0.0.1:34969';  // Gateway URL
+        const BASE_URL = 'https://coubee-api.murkui.com';  // Gateway URL
         let currentOrder = null;
         let portoneConfig = null;
 
