--- a/payment-test-v3-updated.html
+++ b/payment-test-v3-updated.html
@@ -92,11 +92,11 @@
             
             <div class="form-group">
                 <label>Username:</label>
-                <input type="text" id="username" value="testuser" placeholder="Enter username">
+                <input type="text" id="username" value="test_user" placeholder="Enter username">
             </div>
             <div class="form-group">
                 <label>Password:</label>
-                <input type="password" id="password" value="password123" placeholder="Enter password">
+                <input type="password" id="password" value="1234" placeholder="Enter password">
             </div>
             <button class="btn" onclick="login()">🔑 Login</button>
             <button class="btn warning" onclick="logout()">🚪 Logout</button>
